# autoiptv

./: CMakeLists.txt  README.md  cctv.m3u  config.h.in  hk.m3u  template.m3u  url.txt
src/: autoiptv.cpp  curl.c  curl.h  hp_curl.c  main.c
